hack to hopefully fix image spacing

--- a/_sass/base/_blurbs.scss
+++ b/_sass/base/_blurbs.scss
@@ -18,8 +18,8 @@
 		& img {
 			max-width: 270px;
 			display: block;
-			margin-top: 4em;
-			margin-bottom; 4em;
+			padding-top: 2em;
+			// margin-bottom; 4em;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -28,5 +28,5 @@
 }
 .partners-parent {
 	margin-top: 1em;
-	margin-bottom: -6em;
+	margin-bottom: -2em;
 }
